<resources>

    <!-- Languages -->
    <string name="detect_language">Will be detected</string>

    <string name="app_name">Remember me</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="vocabulary_box">Vocabulary box</string>
    <string name="current_box">Current box</string>
    <string name="default_name">Default</string>
    <string name="rename_box">Rename box</string>
    <string name="foreign_language">Foreign language</string>
    <string name="native_language">Native language</string>

    <string name="translation_direction">Translation direction</string>
    <string name="foreign_to_native">Foreign to native</string>
    <string name="native_to_foreign">Native to foreign</string>
    <string name="random">Random</string>

    <string name="enter_new_name_here">Enter new name here</string>
    <string name="box_exists">A box with this name already exists</string>
    <string name="enter_new_name_for_box">Enter a new name for box</string>

    <string name="compartment">Compartment</string>
    <string name="words">Words</string>
    <string name="repeated">Repeated</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="i_days_ago">%s days ago</string>
    <string name="memorize_new_words">Memorize new words</string>

    <string name="add_word">Add word</string>

    <string name="review_language_settings">Review language settings</string>
    <!--<string name="confirm_language_settings_message">We tried to guess your language settings. Please confirm or update.</string>-->

    <string name="no_translation_found">No translation found.</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="got_it">Got it</string>
    <string name="translate">Translate</string>
    <string name="save">Save</string>
    <string name="word_translated">Word translated</string>
    <string name="no_foreign_word">No foreign word</string>
    <string name="no_native_word">No native word</string>
    <string name="word_already_exists_in_box_s">Word already exists in box %s</string>
    <string name="word_saved">Word saved</string>
    <string name="compartment_i">Compartment %s</string>
    <string name="i_words_left">%s words left</string>
    <string name="one_word_left">1 word left</string>
    <string name="memorize">Memorize</string>

    <string name="create_new_box">Create new box</string>
    <string name="enter_name_for_new_box">Enter a name for the new vocabulary box:</string>
    <string name="delete_box">Delete box</string>
    <string name="delete_box_s_and_all_its_words">Delete box &lt;i&gt;%s&lt;/i&gt; and all its words?</string>
    <string name="deleted_box_s">Deleted box &lt;i&gt;%s&lt;/i&gt;</string>
    <string name="edit_word">Edit word</string>
    <string name="delete_word">Delete word</string>
    <string name="delete_word_s">Delete word &lt;i&gt;%s&lt;/i&gt;?</string>
    <string name="word_deleted">Word deleted</string>
    <string name="changes_saved">Changes saved</string>
    <string name="words_learned">Words learned</string>
    <string name="message">message</string>
    <string name="title">title</string>
    <string name="words_from_compartment_known">You\'ve mastered the words from this compartment. Therefore it\'s not necessary to repeat them any more.</string>
    <string name="randomString">Random</string>
    <string name="will_be_detected">Will be detected</string>
    <string name="no_words_to_repeat">No words to repeat</string>
    <string name="one_word_to_repeat">1 word to repeat</string>
    <string name="i_words_to_repeat">%s words to repeat</string>
    <string name="learned">Learned</string>
    <string name="n_words_to_repeat">%s words to repeat</string>
    <string name="n_from_box_s">%1$s from box %2$s</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="select_foreign_language">Select foreign language</string>
    <string name="select_native_language">Select native language</string>
    <string name="select_current_box">Select current box</string>
    <string name="select_translation_direction">Select translation direction</string>
    <string name="show_previous_words">Show previous words</string>
    <string name="show_next_words">Show next words</string>
    <string name="right">Right</string>
    <string name="show_next_word">Show next word</string>
    <string name="wrong">Wrong</string>
    <string name="word">Word</string>
    <string name="out_of">out of</string>
    <string name="green_icon">Green icon</string>
    <string name="red_icon">Red icon</string>

</resources>
