<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.main.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_create_new_box"
        android:title="@string/create_new_box"
        />

    <item
        android:id="@+id/action_rename_box"
        android:title="@string/rename_box"
        />

    <item
        android:id="@+id/action_delete_current_box"
        android:title="@string/delete_box"
        />

    <item
        android:id="@+id/action_add_word"
        android:title="@string/add_word"
        />
</menu>
