<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/languageSettingsDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:columnCount="2"
    android:padding="8dp">

    <TextView
        app:layout_columnWeight="1"
        app:layout_gravity="left|start"
        app:layout_row="0"
        app:layout_column="0"
        android:text="@string/foreign_language"
        android:contentDescription="@string/foreign_language"
        style="@style/LabelText"
        />

    <Spinner
        android:id="@+id/foreignLanguageSpinner"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"
        app:layout_row="0"
        app:layout_column="1"
        android:contentDescription="@string/select_foreign_language"
        />

    <TextView
        app:layout_columnWeight="1"
        app:layout_gravity="left|start"
        app:layout_row="1"
        app:layout_column="0"
        android:text="@string/native_language"
        android:contentDescription="@string/native_language"
        style="@style/LabelText"
        />

    <Spinner
        android:id="@+id/nativeLanguageSpinner"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"
        app:layout_row="1"
        app:layout_column="1"
        android:contentDescription="@string/select_native_language"
        />

</android.support.v7.widget.GridLayout>
