<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <!-- the last two attributes prevent the editText from gaining focus immediately -->
    <LinearLayout
        android:id="@+id/add_word_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelAddWordButton"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                />

            <Button
                android:id="@+id/translateAddWordButton"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/translate"
                />

            <Button
                android:id="@+id/saveAddWordButton"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/save"
                />

        </LinearLayout>

        <android.support.v7.widget.CardView style="@style/Flashcard">
            <EditText android:id="@+id/foreign_word_edittext" style="@style/FlashcardText" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/Flashcard">
            <EditText android:id="@+id/native_word_edittext" style="@style/FlashcardText" />
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>