<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.gmail.maloef.rememberme.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="2">

        <TextView
            app:layout_columnWeight="1"
            app:layout_gravity="left"
            android:text="@string/current_box"
            style="@android:style/TextAppearance.Large"
            app:layout_row="0"
            app:layout_column="0"
            />

        <Spinner
            android:id="@+id/vocabularyBoxSpinner"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="0"
            app:layout_column="1"
            />

        <TextView
            app:layout_columnWeight="1"
            app:layout_gravity="right"
            android:text="Hier is nix!"
            app:layout_row="1"
            app:layout_column="0"
            />

        <Button
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            android:gravity="center"
            android:text="@string/rename_box"
            app:layout_row="1"
            app:layout_column="1"
            />

        <TextView
            app:layout_columnWeight="1"
            app:layout_gravity="left"
            android:text="@string/foreign_language"
            app:layout_row="2"
            app:layout_column="0"
            />

        <Spinner
            android:id="@+id/foreignLanguageSpinner"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="2"
            app:layout_column="1"
            />

    </android.support.v7.widget.GridLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"/>

</LinearLayout>
